# rust-async-coap

./: .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
async-coap/: Cargo.toml
async-coap-tokio/: Cargo.toml  README.md
async-coap-tokio/src/: lib.rs  tokio_async_udp_socket.rs
async-coap-tokio/tests/: test.rs
async-coap-uri/: Cargo.toml  README.md
async-coap-uri/proc-macros/: Cargo.toml  README.md
async-coap-uri/proc-macros/src/: error.rs  lib.rs  parse_error.rs  spanned.rs  unescape_uri.rs
async-coap-uri/proc-macros/tests/: tests.rs
async-coap-uri/proc-macros/tests/ui/assert_rel_ref_literal/: escaped_ascii_control.rs  escaped_ascii_control.stderr  invalid_escape.rs  invalid_escape.stderr  invalid_literal.rs  invalid_literal.stderr  invalid_utf8.rs  invalid_utf8.stderr  missing_char_1.rs  missing_char_1.stderr  missing_char_2.rs  missing_char_2.stderr  space.rs  space.stderr  unescaped_ascii_control.rs  unescaped_ascii_control.stderr  unfinished_utf8.rs  unfinished_utf8.stderr
async-coap-uri/proc-macros/tests/ui/assert_uri_literal/: escaped_ascii_control.rs  escaped_ascii_control.stderr  invalid_escape.rs  invalid_escape.stderr  invalid_literal.rs  invalid_literal.stderr  invalid_utf8.rs  invalid_utf8.stderr  malformed_scheme.rs  malformed_scheme.stderr  malformed_structure_1.rs  malformed_structure_1.stderr  malformed_structure_2.rs  malformed_structure_2.stderr  missing_char_1.rs  missing_char_1.stderr  missing_char_2.rs  missing_char_2.stderr  space.rs  space.stderr  unescaped_ascii_control.rs  unescaped_ascii_control.stderr  unfinished_utf8.rs  unfinished_utf8.stderr
async-coap-uri/src/: any_uri_ref.rs  error.rs  lib.rs  macros.rs  regexes.rs  rel_ref.rs  rel_ref_buf.rs  test.rs  uri.rs  uri_buf.rs  uri_raw_components.rs  uri_ref.rs  uri_ref_buf.rs  uri_type.rs  uri_unescape_buf.rs
async-coap-uri/src/escape/: escape_uri.rs  mod.rs  test.rs  unescape_uri.rs
async-coap-uri/tests/: macros.rs
async-coap/src/: arc_guard.rs  block.rs  consts.rs  content_format.rs  error.rs  etag.rs  inbound_context.rs  lib.rs  link_format.rs  local_endpoint.rs  null.rs  receive_as_stream.rs  remote_endpoint.rs  response_status.rs  send_as_stream.rs  socketaddr.rs  trans_params.rs  util.rs
async-coap/src/datagram/: allow_udp_socket.rs  async_socket.rs  inbound_context.rs  local_endpoint.rs  loopback_socket.rs  mod.rs  null_socket.rs  remote_endpoint.rs  response_tracker.rs  send_future.rs
async-coap/src/message/: codec.rs  display.rs  mod.rs  msg_code.rs  msg_type.rs  null.rs  read.rs  std_encoder.rs  std_parser.rs  token.rs  write.rs
async-coap/src/option/: encoder.rs  insert.rs  iter.rs  key.rs  mod.rs  num.rs  value.rs
async-coap/src/send_desc/: add_option.rs  emit.rs  handler.rs  include_socket_addr.rs  inspect.rs  mod.rs  multicast.rs  nonconfirmable.rs  observe.rs  payload.rs  ping.rs  request.rs  unicast_block2.rs  uri_host_path.rs
