[package]
name = "async-coap-tokio"
version = "0.1.0"
authors = ["Robert Quattlebaum <rquattle@google.com>"]
edition = "2018"
description = "Tokio back-end for `async-coap::datagram`"
repository = "https://github.com/google/rust-async-coap/tree/master/async-coap-tokio"
documentation = "https://docs.rs/async-coap-tokio/"
license = "Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-coap = { path = "../async-coap", version = "0.1" }
tokio = {version = "0.2", features = ["net"]}
mio = "0.6"
futures = "0.3"

[dev-dependencies]
tokio = {version = "0.2", features = ["rt-core", "macros"]}

