[package]
name = "async-coap-uri-macros"
version = "0.1.0"
authors = ["Robert Quattlebaum <rquattle@google.com>"]
edition = "2018"
description = "Crate providing proc-macros for the `async-coap-uri` crate."
repository = "https://github.com/google/rust-async-coap"
documentation = "https://docs.rs/async-coap-uri/"
license = "Apache-2.0"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
lazy_static = "1.4"
proc-macro-hack =  "0.5"
proc-macro2 = "1.0"

[dependencies.syn]
version = "1.0"
default-features = false
features = ["parsing", "proc-macro", "printing"]

[dependencies.regex]
version = "1.3"
default-features = false
features = ["std", "perf", "perf-cache", "perf-dfa", "perf-inline", "perf-literal"]

[dev-dependencies]
trybuild = "1.0"

[[test]]
name = "tests"
path = "tests/tests.rs"
